# eci_genai

./: 1_intro.ipynb  3_neural_networks.ipynb  4_transformers.ipynb  5_hugging_face.ipynb  6_langchain.ipynb  7_langgraph.ipynb  Makefile  README.md  compose.yml  proyecto.ipynb  pyproject.toml  taller1.ipynb
.devenv/: Dockerfile
