[project]
name = "eci-genai"
version = "0.1.0"
description = "Contenido del curso de inteligencia artificial generativa con grandes modelos del lenguaje para la maestria en Informatica de la Escuela Colombiana de Ingenieria - Julio Garavito."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.1.1",
    "jupytext>=1.17.3",
    "transformers[torch]>=4.57.0",
]

[dependency-groups]
dev = [
    "ipython>=9.6.0",
    "jedi-language-server>=0.45.1",
    "mypy>=1.18.2",
    "ruff>=0.13.3",
    "ty>=0.0.1a21",
]
